objects/Engineer_Checklist__c/fields/Drier_Condensate__c.field-meta.xml
<CustomField>
    <fullName>Drier_Condensate__c</fullName>
    <label>Drier Condensate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>