objects/Engineer_Checklist__c/fields/Electrical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Condition</label>
    <type>Checkbox</type>
</CustomField>