objects/Engineer_Checklist__c/fields/Email_Confirmation_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_to__c</fullName>
    <description>Use this email address to send confirmation of service</description>
    <inlineHelpText>This is the Site Email which will receive a copy of the service sheet</inlineHelpText>
    <label>Certification Email To</label>
    <type>Email</type>
</CustomField>