objects/Engineer_Checklist__c/fields/Empty_Container_alarms_and_hoses__c.field-meta.xml
<CustomField>
    <fullName>Empty_Container_alarms_and_hoses__c</fullName>
    <label>Empty Container alarms and hoses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>