objects/Engineer_Checklist__c/fields/End_Test_Done__c.field-meta.xml
<CustomField>
    <fullName>End_Test_Done__c</fullName>
    <label>End</label>
    <type>TextArea</type>
</CustomField>