objects/Engineer_Checklist__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Service Sheets Completed by this Engineer</relationshipLabel>
    <relationshipName>Service_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>