objects/Engineer_Checklist__c/fields/Engineer_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Signature__c</fullName>
    <inlineHelpText>Dental Chair Manufacturer is the same as Make, Model, etc, if(different) - engineer complete this manually if required</inlineHelpText>
    <label>Signed</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>