objects/Engineer_Checklist__c/fields/Engineers_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Engineers_On_Site__c</fullName>
    <label>Technician On Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>