objects/Engineer_Checklist__c/fields/Equipment_Isolator_nearby__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Isolator_nearby__c</fullName>
    <label>Equipment Isolator nearby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>