objects/Engineer_Checklist__c/fields/Equipment_labelled__c.field-meta.xml
<CustomField>
    <fullName>Equipment_labelled__c</fullName>
    <label>Equipment labelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>