objects/Engineer_Checklist__c/fields/Exhaust_Filter_Collector__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_Filter_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhaust Filter / Collector</label>
    <type>Checkbox</type>
</CustomField>