objects/Engineer_Checklist__c/fields/Exhaust_to_outside__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_to_outside__c</fullName>
    <label>Exhaust to outside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>