objects/Engineer_Checklist__c/fields/Exhaust_to_outside_or_Bacterial_filter__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_to_outside_or_Bacterial_filter__c</fullName>
    <inlineHelpText>Exhaust to outside or Bacterial filter fitted?:</inlineHelpText>
    <label>Exhaust to outside or Bacterial Filter</label>
    <type>TextArea</type>
</CustomField>