objects/Engineer_Checklist__c/fields/External_Receiver_Corrosion__c.field-meta.xml
<CustomField>
    <fullName>External_Receiver_Corrosion__c</fullName>
    <label>External Receiver Corrosion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>