objects/Engineer_Checklist__c/fields/FA_Engineers_on_Site__c.field-meta.xml
<CustomField>
    <fullName>FA_Engineers_on_Site__c</fullName>
    <description>No of Engineers on site</description>
    <label>Technician on Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>