objects/Engineer_Checklist__c/fields/FA_IA_SLA__c.field-meta.xml
<CustomField>
    <fullName>FA_IA_SLA__c</fullName>
    <description>Spare Parts SLA</description>
    <label>SLA Battery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12v 1.2Ah</fullName>
            </value>
            <value>
                <fullName>12v 12Ah</fullName>
            </value>
            <value>
                <fullName>12v 17Ah</fullName>
            </value>
            <value>
                <fullName>12v 2.1Ah</fullName>
            </value>
            <value>
                <fullName>12v 2.8Ah</fullName>
            </value>
            <value>
                <fullName>12v 24Ah</fullName>
            </value>
            <value>
                <fullName>12v 3.2Ah</fullName>
            </value>
            <value>
                <fullName>12v 7Ah</fullName>
            </value>
            <value>
                <fullName>6v 10Ah</fullName>
            </value>
            <value>
                <fullName>EDA</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>