objects/Engineer_Checklist__c/fields/FA_O_C_Sounder_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_O_C_Sounder_Monitoring_Qty__c</fullName>
    <label>O/C Sounder Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>