objects/Engineer_Checklist__c/fields/FA_Outputs_Reinstated__c.field-meta.xml
<CustomField>
    <fullName>FA_Outputs_Reinstated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outputs Reinstated</description>
    <label>Outputs Reinstated</label>
    <type>Checkbox</type>
</CustomField>