objects/Engineer_Checklist__c/fields/FA_Radioactive_Disposal__c.field-meta.xml
<CustomField>
    <fullName>FA_Radioactive_Disposal__c</fullName>
    <label>Radioactive Disposal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>