objects/Engineer_Checklist__c/fields/FA_Remote_Indicator_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_Remote_Indicator_Qty__c</fullName>
    <label>Remote Indicator Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>