objects/Engineer_Checklist__c/fields/FA_S_C_Antenna_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>FA_S_C_Antenna_Monitoring_Qty__c</fullName>
    <label>S/C Antenna Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>