objects/Engineer_Checklist__c/fields/FA_SLA_Age__c.field-meta.xml
<CustomField>
    <fullName>FA_SLA_Age__c</fullName>
    <label>SLA Age</label>
    <length>100</length>
    <type>Text</type>
</CustomField>