objects/Engineer_Checklist__c/fields/FA_SLA_Charging_Voltage__c.field-meta.xml
<CustomField>
    <fullName>FA_SLA_Charging_Voltage__c</fullName>
    <label>SLA Charging Voltage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>