objects/Engineer_Checklist__c/fields/FA_Sounder_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>FA_Sounder_Test_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sounder Test Completed?</description>
    <inlineHelpText>If YOU completed the Sounder Test, then tick this box and fill in the date.</inlineHelpText>
    <label>Sounder Test Completed?</label>
    <type>Checkbox</type>
</CustomField>