objects/Engineer_Checklist__c/fields/FA_Sounder_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_Sounder_Test_Date__c</fullName>
    <description>Last Sounder Test Date</description>
    <inlineHelpText>This field is either filled in with the date the Customer gives you, if the customer completed the test, or the date on which you completed the test.</inlineHelpText>
    <label>Sounder Test Date</label>
    <type>Date</type>
</CustomField>