objects/Engineer_Checklist__c/fields/FA_Sounder_Testing_last_completed__c.field-meta.xml
<CustomField>
    <fullName>FA_Sounder_Testing_last_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sounder testing was not allowed on site today by the responsible person who confirmed they were last tested on?</description>
    <inlineHelpText>Sounder testing was not allowed on site today by the responsible person who confirmed they were last tested on?</inlineHelpText>
    <label>Sounder Testing last completed?</label>
    <type>Checkbox</type>
</CustomField>