objects/Engineer_Checklist__c/fields/FA_Spare_Parts_Smoke_Detector_QTY__c.field-meta.xml
<CustomField>
    <fullName>FA_Spare_Parts_Smoke_Detector_QTY__c</fullName>
    <description>Spare Parts Smoke Detector Quantity</description>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>