objects/Engineer_Checklist__c/fields/FA_Travel_Time_Value__c.field-meta.xml
<CustomField>
    <fullName>FA_Travel_Time_Value__c</fullName>
    <description>Travel Time Value</description>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>