objects/Engineer_Checklist__c/fields/Feedback_Smiley__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Smiley__c</fullName>
    <formula>IF(ISPICKVAL(Rating__c , &apos;Satisfied&apos;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E0000009XjJ&quot;, &quot;FeadbackYes&quot;,30,30),IF(ISPICKVAL(Rating__c , &apos;Neutral&apos; ), IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E0000009XjT&quot;, &quot;FeadbackNA&quot;,30,30),IF(ISPICKVAL(Rating__c ,&apos;Dissatisfied&apos;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E0000009XjO&quot;, &quot;FeadbackNo&quot;,30,30),&quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback Smiley</label>
    <type>Text</type>
</CustomField>