objects/Engineer_Checklist__c/fields/Fibre_Optics__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Optics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fibre Optics</label>
    <type>Checkbox</type>
</CustomField>