objects/Engineer_Checklist__c/fields/Fire_Extinguisher_Service_complete__c.field-meta.xml
<CustomField>
    <fullName>Fire_Extinguisher_Service_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Completed sheet creates invoice and sends confirmation to customer. If you select a Next Service Date (NSD) it will alert the Service Team to schedule the next service.</inlineHelpText>
    <label>Submit This Service</label>
    <type>Checkbox</type>
</CustomField>