objects/Engineer_Checklist__c/fields/Foot_Pedal_Functions__c.field-meta.xml
<CustomField>
    <fullName>Foot_Pedal_Functions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foot Pedal Functions</label>
    <type>Checkbox</type>
</CustomField>