objects/Engineer_Checklist__c/fields/Form_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Form_Response_JSON__c</fullName>
    <description>This is the technical field for storing the from Response from ServiceM8</description>
    <label>Form Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>