objects/Engineer_Checklist__c/fields/General_Condition__c.field-meta.xml
<CustomField>
    <fullName>General_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Condition</label>
    <type>Checkbox</type>
</CustomField>