objects/Engineer_Checklist__c/fields/General_Condition_Operation__c.field-meta.xml
<CustomField>
    <fullName>General_Condition_Operation__c</fullName>
    <label>General Condition &amp; Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>