objects/Engineer_Checklist__c/fields/Handpiece_distal_connectors__c.field-meta.xml
<CustomField>
    <fullName>Handpiece_distal_connectors__c</fullName>
    <label>Handpiece distal connectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>