objects/Engineer_Checklist__c/fields/Hose_Between_Dosing_pump_and_Machine__c.field-meta.xml
<CustomField>
    <fullName>Hose_Between_Dosing_pump_and_Machine__c</fullName>
    <label>Hose Between Dosing pump and Machine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>