objects/Engineer_Checklist__c/fields/Hose_Reel_19_Service_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Hose_Reel_19_Service_Exchange__c</fullName>
    <label>Service Exchange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>