objects/Engineer_Checklist__c/fields/HQ_Invoice_Email_To__c.field-meta.xml
<CustomField>
    <fullName>HQ_Invoice_Email_To__c</fullName>
    <formula>IF(Site__r.HQ_Invoice_Email_To__c &lt;&gt; &quot;&quot;, Site__r.HQ_Invoice_Email_To__c, Site__r.Parent.HQ_Invoice_Email_To__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ Invoice Email To</label>
    <type>Text</type>
</CustomField>