objects/Engineer_Checklist__c/fields/Imaging_software_used__c.field-meta.xml
<CustomField>
    <fullName>Imaging_software_used__c</fullName>
    <label>Imaging Software Used</label>
    <length>250</length>
    <type>Text</type>
</CustomField>