objects/Engineer_Checklist__c/fields/Imaging_system_setup__c.field-meta.xml
<CustomField>
    <fullName>Imaging_system_setup__c</fullName>
    <label>Imaging system set up for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>P.P</fullName>
            </value>
            <value>
                <fullName>D.D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>