objects/Engineer_Checklist__c/fields/Incoming_Water_Filter__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Water_Filter__c</fullName>
    <label>Incoming Water Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>