objects/Engineer_Checklist__c/fields/Inline_filters_removed__c.field-meta.xml
<CustomField>
    <fullName>Inline_filters_removed__c</fullName>
    <inlineHelpText>(If not take details and
recommend elements replaced)</inlineHelpText>
    <label>Inline filters removed?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>