objects/Engineer_Checklist__c/fields/Installed_software_on_PC__c.field-meta.xml
<CustomField>
    <fullName>Installed_software_on_PC__c</fullName>
    <label>Installed Software On PC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>