objects/Engineer_Checklist__c/fields/Insulation_2M__c.field-meta.xml
<CustomField>
    <fullName>Insulation_2M__c</fullName>
    <label>Insulation 2M</label>
    <length>255</length>
    <type>Text</type>
</CustomField>