objects/Engineer_Checklist__c/fields/Integral_or_separate_amalgam_separationn__c.field-meta.xml
<CustomField>
    <fullName>Integral_or_separate_amalgam_separationn__c</fullName>
    <label>Integral or Separate amalgam seperation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integral</fullName>
            </value>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>