objects/Engineer_Checklist__c/fields/Intube_Air_Filter__c.field-meta.xml
<CustomField>
    <fullName>Intube_Air_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intube Air Filter</label>
    <type>Checkbox</type>
</CustomField>